--- a/formulario.html
+++ b/formulario.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Formulario</h1>
+    <h1>FORMULARIO</h1>
     <h2>Ponte en contacto con nosotros</h2>
     <h3>Deja tus datos</h3>
 </body>
